[update] update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
 # Byte-compiled / optimized / DLL files
 dataset/raw/training-data
 dataset/raw/test-data
-assets/clf-t5-small
-assets/clf-t5-base
-assets/sum-t5-small
+assets/clf-distilroberta
 assets/sum-t5-base
-outputs/clf:xgboost-ie:t5small/train
-outputs/clf:xgboost-ie:t5small/test
-outputs/clf:t5small-ie:t5small/train
-outputs/clf:t5small-ie:t5small/test
-outputs/clf:t5large-ie:t5large/train
-outputs/clf:t5large-ie:t5large/test
+assets/sum-t5-small
+outputs/xgboost-t5small/train
+outputs/xgboost-t5small/test
+outputs/distilroberta-t5base/train
+outputs/distilroberta-t5base/test
 
 __pycache__/
 *.py[cod]
